--- a/style/main.css
+++ b/style/main.css
@@ -1,17 +1,64 @@
-.header {
-  background-color: #C9C9C9;
-}
-.header.mainTitle {
-  color: red;
+body {
+  font-size: 50%;
+  display: grid;
+  padding: 0px;
+  margin: 0px;
+  font-family: "Calibri", serif;
+  height: 100vh;
+  grid-template: "head head" 1fr "nav  main" 4fr "nav  foot" 1fr/1fr 5fr;
 }
 
-.calendar {
-  background-color: #A9A9A9;
-  display: flex;
+.header {
+  background-color: red;
+  grid-area: head;
 }
-.calendar.card-day {
-  border: 1px solid black;
-  padding: 10px;
+
+.day-selection-bar {
+  background-color: yellow;
+  grid-area: nav;
+}
+
+.day-card {
+  background-color: blue;
+  grid-area: main;
+}
+
+.footer {
+  background-color: pink;
+  grid-area: foot;
+}
+
+.box {
+  background: linear-gradient(110deg, rgba(92, 219, 149, 0.8), rgba(55, 150, 131, 0.8));
+  padding: 0em;
+  border-radius: 0.1em;
+}
+
+.header .__mainTitle {
+  font-size: 4em;
+  color: #05386B;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-left: 1em;
+  padding-left: 0.5em;
+  border-left: 1px solid #05386B;
+}
+
+.day-selection-bar {
+  color: #379683;
+}
+.day-selection-bar .__day-button {
+  box-shadow: 1px 0px 1px 1px #4040400d;
+  text-align: center;
+  transition: all 0.5s;
+  height: 10%;
+}
+.day-selection-bar :hover {
+  background-color: linear-gradient(110deg, rgba(55, 150, 131, 0.8), rgba(92, 219, 149, 0.8));
+}
+.day-selection-bar :active {
+  box-shadow: 0px 0px #4040400d;
+  transform: translate(0px, 2px);
 }
 
 /*# sourceMappingURL=main.css.map */
