--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,12 @@
 body {
   font-size: 50%;
+  display: -ms-grid;
   display: grid;
   padding: 0px;
   margin: 0px;
   font-family: "Calibri", serif;
   height: 100vh;
-  grid-template: "head head" 1fr "nav  main" 4fr "nav  foot" 1fr/1fr 5fr;
+  grid-template: "head head" 1fr "nav  main" 4fr "nav  foot" 1fr / 1fr 5fr;
 }
 
 .header {
@@ -28,10 +29,8 @@ body {
   grid-area: foot;
 }
 
-.box {
-  background: linear-gradient(110deg, rgba(92, 219, 149, 0.8), rgba(55, 150, 131, 0.8));
-  padding: 0em;
-  border-radius: 0.1em;
+div {
+  border: 2px solid red;
 }
 
 .header .__mainTitle {
@@ -47,18 +46,24 @@ body {
 .day-selection-bar {
   color: #379683;
 }
+
 .day-selection-bar .__day-button {
-  box-shadow: 1px 0px 1px 1px #4040400d;
+  -webkit-box-shadow: 1px 0px 1px 1px #4040400d;
+          box-shadow: 1px 0px 1px 1px #4040400d;
   text-align: center;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   height: 10%;
 }
+
 .day-selection-bar :hover {
   background-color: linear-gradient(110deg, rgba(55, 150, 131, 0.8), rgba(92, 219, 149, 0.8));
 }
-.day-selection-bar :active {
-  box-shadow: 0px 0px #4040400d;
-  transform: translate(0px, 2px);
-}
 
+.day-selection-bar :active {
+  -webkit-box-shadow: 0px 0px #4040400d;
+          box-shadow: 0px 0px #4040400d;
+  -webkit-transform: translate(0px, 2px);
+          transform: translate(0px, 2px);
+}
 /*# sourceMappingURL=main.css.map */
