--- a/style/main.scss
+++ b/style/main.scss
@@ -1,7 +1,7 @@
 
-@import "variables.scss";
+@import "_variables.scss";
 
-@import "layout.scss";
+@import "_layout.scss";
 
-@import "components/header.scss";
-@import "components/selection-bar.scss"
+@import "components/_header.scss";
+@import "components/_selection-bar.scss"
