--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,11 +1,9 @@
 
-$dark-grey-1: #A9A9A9;
-$dark-grey-2: #C9C9C9;
+$dark-grey-1: #282726;
+$dark-grey-2: #54504C;
+$dark-grey-3: rgb(58, 56, 53);
 
-$dark-green-1: #05386B;
-$dark-green-2: #379683;
+$medium-grey: #86817C;
 
-$medium-green: #5CDB95;
-
-$light-green-1: #8EE4AF;
-$light-green-2: #EDF5E1;
+$light-grey-1: #D6CAB0;
+$light-grey-2: #EDF5E1;
