--- a/style/main.scss
+++ b/style/main.scss
@@ -4,4 +4,5 @@
 @import "_layout.scss";
 
 @import "components/_header.scss";
-@import "components/_selection-bar.scss"
+@import "components/_selection-bar.scss";
+@import "components/_day-card";
