--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -1,16 +1,26 @@
 
 .header {
-  background: linear-gradient(110deg, rgba($medium-green, 0.8), rgba($dark-green-2, 0.8));
-  padding: 0em;
-  border-radius: 0.1em;
+  background: $dark-grey-1;
+  padding: 0px;
+  display: inline-flex;
+  align-items: center;
 
   & .__mainTitle {
+    width: fit-content;
     font-size: 4em;
-    color: $dark-green-1;
-    font-weight: 400;
+    color: $light-grey-1;
+    font-weight: 100;
     text-transform: uppercase;
-    margin-left: 1em;
-    padding-left: 0.5em;
-    border-left: 1px solid $dark-green-1;
+    margin-left: 2em;
+    padding-left: 0.3em;
+    border-left: 1px solid $dark-grey-2;
+  }
+
+  & .__date {
+    color: $light-grey-1;
+    margin-left: 4em;
+    font-size: 3em;
+    text-transform: uppercase;
+
   }
 }
