make some color tweaks

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -4,7 +4,7 @@ body {
   display: grid;
   padding: 0px;
   margin: 0px;
-  background-color: $dark-grey-2;
+  background-color: $medium-grey-2;
   font-family: "Calibri", serif;
   height: 100vh;
   grid-template: "head head" 2fr
