--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,9 +1,12 @@
 
+
 $dark-grey-1: #282726;
 $dark-grey-2: #54504C;
 $dark-grey-3: rgb(58, 56, 53);
 
-$medium-grey: #86817C;
+$medium-grey-1: #86817C;
+$medium-grey-2: #D9D9D9;
 
 $light-grey-1: #D6CAB0;
 $light-grey-2: #EDF5E1;
+$light-grey-3: #F9F9F9;
