--- a/style/components/_day-card.scss
+++ b/style/components/_day-card.scss
@@ -8,8 +8,9 @@
         font-size: 3em;
         color: $light-grey-1;
         font-weight: 100;
-        padding-top: 3em;
-        margin: 1em;
+        margin: 0.5em;
+        position: relative;
+        top: 0.3em;
     }
 
     & .__tasks-to-display {
