--- a/style/components/_selection-bar.scss
+++ b/style/components/_selection-bar.scss
@@ -18,7 +18,7 @@
   }
 
     &:active {
-      box-shadow: 0px 0px #4040400d;
+      box-shadow: 0px 0px transparent;
       transform: translate(0px, 2px);
     }
   }
