--- a/style/main.scss
+++ b/style/main.scss
@@ -5,4 +5,6 @@
 
 @import "components/_header.scss";
 @import "components/_selection-bar.scss";
-@import "components/_day-card";
+@import "components/_day-card.scss";
+@import "components/_next-task.scss";
+@import "components/_footer.scss";
