--- a/style/components/_next-task.scss
+++ b/style/components/_next-task.scss
@@ -3,34 +3,62 @@
     text-align: center;
     position: relative;
     display: block;
+    text-overflow: clip;
 
     & h1 {
         font-size: 2em;
-        color: $dark-grey-2;
-        text-transform: uppercase;
-        width: fit-content;
-        margin-left: auto;
-        margin-right: auto;
-        border-top: 1px solid $dark-grey-1;
-        border-bottom: 1px solid $dark-grey-1;
-        margin-bottom: 0;
-    }
-
-    & .__task-title {
-        color: $dark-grey-1;
-        font-size: 2em;
-        width: 80%;
-        height: 1.3em;
-        margin-left: auto;
-        margin-right: auto;
-        overflow-y: hidden;
-        margin-bottom: 0.5em;
-        text-overflow: ellipsis;
         overflow: hidden;
+        white-space: pre;
+        position: absolute;
+        color: $light-grey-3;
+        background: linear-gradient(135deg, $dark-grey-1 -325%, $dark-grey-3);
+        width: 100%;
+        height: 40%;
+        text-transform: uppercase;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+
+        &:after {
+            content: "⟹";
+            position: relative;
+            opacity: 0;
+            left: -0.5em;
+            transition: all 0.3s;
+        }
     }
 
-    & .__timer {
-        color: $dark-grey-2;
-        font-size: 2.5em;
+    &:hover > h1:after {
+        left: 0.5em;
+        opacity: 1;
+    } 
+
+    & .__task-info {
+        position: absolute;
+        height: 60%;
+        bottom: 0;
+        margin-left: 2em;
+        width: 80%;
+
+        & .__task-title {
+            color: $dark-grey-1;
+            font-size: 1.7em;
+            height: 1.3em;
+            font-weight: 800;
+            margin-left: auto;
+            margin-right: auto;
+            white-space: pre;
+            overflow-y: hidden;
+            margin-bottom: 0;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+
+        & .__timer {
+            color: $dark-grey-1;
+            font-size: 1.8em;
+            font-weight: 100;
+        }
+
     }
 }
