added some first styling to the tasks.

--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -51,6 +51,7 @@
     width: 50%;
     height: 4em;
     position: relative;
+    padding: 5%;
     vertical-align: middle;
 
     & .__text-second {
