--- a/style/components/_day-card.scss
+++ b/style/components/_day-card.scss
@@ -1,12 +1,10 @@
 
 .day-card {
     background-color: $light-grey-3;
-    border-radius: 0.5em;
     margin: 1em;
     display: grid;
     min-width: 0;
     min-height: 0;
-    border: 2px solid red;
     position: relative;
     grid-template: "titleT titleD titleD titleS" 1fr
                    "task task schedule schedule" 9fr
@@ -31,7 +29,7 @@
         grid-area: task;
         overflow-y: auto;
         overflow-x: hidden;
-        background-color: green;
+        background-color:black;
     }
 
     & .__schedule {
@@ -40,27 +38,51 @@
     }
 
     & .task {
+        position: relative;
         height: 20%;
-        display: grid;
-        grid-template: "sidebar title" 1fr
-                       "sidebar time"  1fr / 1fr 4fr;
+        margin: 0.2em;
+        border-radius: 0.5em;
+        background-color: yellow;
 
         & .__title {
-            background-color: rgba(red, 0.5);
-            grid-area: title;
+            position: absolute;
+            top: 0;
+            left: 2em;
+            width: 100%;
+            height: 50%;
+            background-color: $medium-grey-2;
 
         }
 
         & .__start-time {
-            background-color: rgba(blue, 0.5);
-            grid-area: time;
+            position: absolute;
+            top: 0;
+            left: 2em;
+            width: 100%;
+            top: 50%;
+            height: 50%;
+            background-color: $medium-grey-2;
 
         }
 
         & .__side-bar {
-            background-color: rgba(pink, 0.5);
-            grid-area: sidebar;
+            position: absolute;
+            width: 2em;
+            background-color: $dark-grey-3;
+            height: 100%;
+            overflow: hidden;
 
+            &:hover {
+                width: 30%;
+                z-index: 100;
+            }
+
+        }
+
+        &:nth-child(odd) {
+            & > .__title, .__start-time {
+                background-color: $light-grey-3;
+            }
         }
 
         & .__complete-btn {
@@ -70,5 +92,11 @@
         & .__remove-btn {
 
         }
+
+        
+
+        
     }
+
+    
 }
