--- a/style/main.css
+++ b/style/main.css
@@ -93,6 +93,7 @@ body {
   width: 50%;
   height: 4em;
   position: relative;
+  padding: 5%;
   vertical-align: middle;
 }
 
@@ -184,13 +185,11 @@ body {
 
 .day-card {
   background-color: #F9F9F9;
-  border-radius: 0.5em;
   margin: 1em;
   display: -ms-grid;
   display: grid;
   min-width: 0;
   min-height: 0;
-  border: 2px solid red;
   position: relative;
   grid-template: "titleT titleD titleD titleS" 1fr "task task schedule schedule" 9fr / 3fr 1fr 1fr 3fr;
 }
@@ -214,7 +213,7 @@ body {
   grid-area: task;
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: green;
+  background-color: black;
 }
 
 .day-card .__schedule {
@@ -223,25 +222,47 @@ body {
 }
 
 .day-card .task {
+  position: relative;
   height: 20%;
-  display: -ms-grid;
-  display: grid;
-  grid-template: "sidebar title" 1fr "sidebar time"  1fr / 1fr 4fr;
+  margin: 0.2em;
+  border-radius: 0.5em;
+  background-color: yellow;
 }
 
 .day-card .task .__title {
-  background-color: rgba(255, 0, 0, 0.5);
-  grid-area: title;
+  position: absolute;
+  top: 0;
+  left: 2em;
+  width: 100%;
+  height: 50%;
+  background-color: #D9D9D9;
 }
 
 .day-card .task .__start-time {
-  background-color: rgba(0, 0, 255, 0.5);
-  grid-area: time;
+  position: absolute;
+  top: 0;
+  left: 2em;
+  width: 100%;
+  top: 50%;
+  height: 50%;
+  background-color: #D9D9D9;
 }
 
 .day-card .task .__side-bar {
-  background-color: rgba(255, 192, 203, 0.5);
-  grid-area: sidebar;
+  position: absolute;
+  width: 2em;
+  background-color: #3a3835;
+  height: 100%;
+  overflow: hidden;
+}
+
+.day-card .task .__side-bar:hover {
+  width: 30%;
+  z-index: 100;
+}
+
+.day-card .task:nth-child(odd) > .__title, .day-card .task:nth-child(odd) .__start-time {
+  background-color: #F9F9F9;
 }
 
 .next-task {
