added new button for the task element

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -6,6 +6,7 @@ $dark-grey-3: rgb(58, 56, 53);
 
 $medium-grey-1: #86817C;
 $medium-grey-2: #D9D9D9;
+$medium-grey-3: #B9B9B9;
 
 $light-grey-1: #D6CAB0;
 $light-grey-2: #EDF5E1;
