--- a/style/components/_day-card.scss
+++ b/style/components/_day-card.scss
@@ -1,7 +1,7 @@
 
 .day-card {
-    background-color: $light-grey-3;
-    margin: 1em;
+    background-color: $medium-grey-3;
+    margin: 0em;
     display: grid;
     min-width: 0;
     min-height: 0;
@@ -29,74 +29,12 @@
         grid-area: task;
         overflow-y: auto;
         overflow-x: hidden;
-        background-color:black;
+        border-right: 1px solid $medium-grey-1;
     }
 
     & .__schedule {
         grid-area: schedule;
         background-color: yellow;
     }
-
-    & .task {
-        position: relative;
-        height: 20%;
-        margin: 0.2em;
-        border-radius: 0.5em;
-        background-color: yellow;
-
-        & .__title {
-            position: absolute;
-            top: 0;
-            left: 2em;
-            width: 100%;
-            height: 50%;
-            background-color: $medium-grey-2;
-
-        }
-
-        & .__start-time {
-            position: absolute;
-            top: 0;
-            left: 2em;
-            width: 100%;
-            top: 50%;
-            height: 50%;
-            background-color: $medium-grey-2;
-
-        }
-
-        & .__side-bar {
-            position: absolute;
-            width: 2em;
-            background-color: $dark-grey-3;
-            height: 100%;
-            overflow: hidden;
-
-            &:hover {
-                width: 30%;
-                z-index: 100;
-            }
-
-        }
-
-        &:nth-child(odd) {
-            & > .__title, .__start-time {
-                background-color: $light-grey-3;
-            }
-        }
-
-        & .__complete-btn {
-
-        }
-
-        & .__remove-btn {
-
-        }
-
-        
-
-        
-    }
-
-    
+   
 }
