--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ body {
   display: grid;
   padding: 0px;
   margin: 0px;
-  background: linear-gradient(110deg, #D9D9D9, #86817C);
+  background: linear-gradient(110deg, #D9D9D9 20%, #F9F9F9 250%);
   font-family: "Calibri", serif;
   height: 100vh;
   grid-template: "head head timer" 2fr "nav  main main" 12fr "nav  foot foot" 1fr / 1fr 3.5fr 1.5fr;
@@ -42,8 +42,6 @@ body {
           align-items: center;
   overflow-y: hidden;
   overflow-x: hidden;
-  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 40%, 95% 100%, 0% 100%);
-          clip-path: polygon(0% 0%, 100% 0%, 100% 40%, 95% 100%, 0% 100%);
 }
 
 .header .__mainTitle {
@@ -184,8 +182,8 @@ body {
 }
 
 .day-card {
-  background-color: #F9F9F9;
-  margin: 1em;
+  background-color: #B9B9B9;
+  margin: 0em;
   display: -ms-grid;
   display: grid;
   min-width: 0;
@@ -213,7 +211,7 @@ body {
   grid-area: task;
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: black;
+  border-right: 1px solid #86817C;
 }
 
 .day-card .__schedule {
@@ -221,64 +219,162 @@ body {
   background-color: yellow;
 }
 
-.day-card .task {
+.task {
   position: relative;
   height: 20%;
-  margin: 0.2em;
   border-radius: 0.5em;
-  background-color: yellow;
+  -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
 }
 
-.day-card .task .__title {
+.task .__title {
   position: absolute;
   top: 0;
-  left: 2em;
+  left: 1em;
+  z-index: 1;
   width: 100%;
   height: 50%;
   background-color: #D9D9D9;
 }
 
-.day-card .task .__start-time {
+.task .__start-time {
   position: absolute;
   top: 0;
-  left: 2em;
+  left: 1em;
+  z-index: 1;
   width: 100%;
   top: 50%;
   height: 50%;
   background-color: #D9D9D9;
 }
 
-.day-card .task .__side-bar {
+.task .__side-bar {
   position: absolute;
-  width: 2em;
+  width: 0;
+  text-align: center;
   background-color: #3a3835;
   height: 100%;
+  z-index: 10;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   overflow: hidden;
 }
 
-.day-card .task .__side-bar:hover {
-  width: 30%;
-  z-index: 100;
+.task .__side-bar .__complete-btn {
+  white-space: nowrap;
+  position: relative;
+  height: 50%;
+  width: 100%;
+  background-color: #3a3835;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
-.day-card .task:nth-child(odd) > .__title, .day-card .task:nth-child(odd) .__start-time {
+.task .__side-bar .__complete-btn:hover {
+  background-color: darkgreen;
+}
+
+.task .__side-bar .__remove-btn {
+  white-space: nowrap;
+  position: relative;
+  height: 50%;
+  width: 100%;
+  background-color: #3a3835;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.task .__side-bar .__remove-btn:hover {
+  background-color: darkred;
+}
+
+.task .__side-bar .__icon {
+  position: absolute;
+  left: 0;
+  padding: 0;
+  font-weight: 100;
+  font-size: 3em;
+  color: #F9F9F9;
+  width: 100%;
+  height: 70%;
+}
+
+.task .__side-bar .__label {
+  position: absolute;
+  left: 0;
+  text-transform: uppercase;
+  font-weight: 900;
+  color: #F9F9F9;
+  width: 100%;
+  top: 65%;
+}
+
+.task .__tab-main {
+  position: absolute;
+  background-color: #282726;
+  max-width: 1em;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 2.8em;
+  color: #F9F9F9;
+  -webkit-transition: left 0.5s;
+  transition: left 0.5s;
+  z-index: 20;
+  height: 100%;
+}
+
+.task .__tab-main:after {
+  content: "〉";
+}
+
+.task .__tab-main:hover {
+  left: 10%;
+}
+
+.task .__tab-main:hover:after {
+  content: "〈";
+}
+
+.task .__tab-main:hover ~ .__side-bar {
+  width: 10%;
+}
+
+.task:nth-child(odd) > .__title, .task:nth-child(odd) .__start-time {
   background-color: #F9F9F9;
 }
 
 .next-task {
   text-align: center;
   position: relative;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   text-overflow: clip;
 }
 
 .next-task h1 {
   font-size: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   overflow: hidden;
   white-space: pre;
   position: absolute;
   color: #F9F9F9;
-  background: linear-gradient(135deg, #282726 -325%, #3a3835);
+  background: linear-gradient(135deg, #282726, #54504C);
   width: 100%;
   height: 40%;
   text-transform: uppercase;
@@ -305,8 +401,8 @@ body {
   position: absolute;
   height: 60%;
   bottom: 0;
-  margin-left: 2em;
   width: 80%;
+  margin-left: 10%;
 }
 
 .next-task .__task-info .__task-title {
