--- a/style/main.scss
+++ b/style/main.scss
@@ -6,5 +6,6 @@
 @import "components/_header.scss";
 @import "components/_selection-bar.scss";
 @import "components/_day-card.scss";
+@import "components/_task.scss";
 @import "components/_next-task.scss";
 @import "components/_footer.scss";
