--- a/style/main.css
+++ b/style/main.css
@@ -150,6 +150,7 @@ body {
   transition: all 0.2s;
   position: relative;
   height: 14.25%;
+  cursor: pointer;
 }
 
 .day-selection-bar .__day-button:hover {
@@ -189,7 +190,7 @@ body {
   min-width: 0;
   min-height: 0;
   position: relative;
-  grid-template: "titleT titleD titleD titleS" 1fr "task task schedule schedule" 9fr / 3fr 1fr 1fr 3fr;
+  grid-template: "titleT titleD titleD titleS" 1fr "task task schedule schedule" 14fr / 3fr 1fr 1fr 3fr;
 }
 
 .day-card .__title-task {
@@ -258,6 +259,7 @@ body {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .task .__side-bar .__complete-btn {
@@ -328,6 +330,7 @@ body {
   transition: left 0.5s;
   z-index: 20;
   height: 100%;
+  cursor: pointer;
 }
 
 .task .__tab-main:after {
@@ -357,6 +360,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   text-overflow: clip;
+  cursor: pointer;
 }
 
 .next-task h1 {
