--- a/style/components/_task.scss
+++ b/style/components/_task.scss
@@ -71,7 +71,7 @@
             left: 0;
             padding: 0;
             font-weight: 100;
-            font-size: 3em;
+            font-size: 2em;
             color: $light-grey-3;
             width: 100%;
             height: 70%;
@@ -80,6 +80,7 @@
         & .__label {
             position: absolute;
             left: 0;
+            font-size: 0.8em;
             text-transform: uppercase;
             font-weight: 900;
             color: $light-grey-3;
@@ -97,7 +98,9 @@
         display: flex;
         transform: translate3d(0, 0, 0);
         align-items: center;
-        font-size: 2.8em;
+        font-size: 2em;
+        padding-left: 0.075em;
+        padding-right: 0.075em;
         color: $light-grey-3;
         transition: left 0.5s;
         z-index: 20;
@@ -105,20 +108,20 @@
         cursor: pointer;
         
         &:after {
-            content: "〉";
+            // content: "〉";
         }
 
         &:hover {
-            left: 10%;
+            // left: 10%;
         }  
 
         &:hover:after {
-            content: "〈";
+            // content: "〈";
         }
     }
 
     & .__tab-main:hover ~ .__side-bar {
-        width: 10%;
+        // width: 10%;
     }      
 
     &:nth-child(odd) {
